configs de jogo e inicialização de dados